Add weather widget with geolocation

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,6 +1,7 @@
 @import './_variables';
 @import './_add-journal-form';
 @import './_journal-entry';
+@import './_weather-widget';
 
 * {
   margin: 0;
