--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -2,6 +2,8 @@
 @import './4-components/add-journal-form';
 @import './4-components/journal-entry';
 @import './4-components/weather-widget';
+@import './4-components/tabbar';
+@import './2-layout/grid';
 
 * {
   margin: 0;
