--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -3,7 +3,7 @@
 @import './4-components/journal-entry';
 @import './4-components/weather-widget';
 @import './4-components/tabbar';
-@import './2-layout/grid';
+@import './2-layout/grids';
 
 * {
   margin: 0;
