--- a/src/assets/scss/4-components/_weather-widget.scss
+++ b/src/assets/scss/4-components/_weather-widget.scss
@@ -1,41 +1,51 @@
 .weather-wrapper {
-  grid-area: weather;
+  grid-area: header2;
+  align-self: center;
+  padding: 1rem;
 }
 
-.weather {
-  text-align: left !important;
-}
 .weather-title {
   color: #333;
   font-family: 'Roboto';
   font-weight: 500;
-  font-size: 1.5rem;
+  font-size: 1rem;
+  width: 100%;
+  text-align: right;
 }
 .main {
   max-width: 80vw !important;
 }
 
 .temp {
+  width: 100%;
   display: flex;
   align-items: center;
-  font-size: 1.9rem;
+  font-size: 1.2rem;
   font-weight: bold;
-  margin: -25px 0;
+  margin: -5px 0;
+
+  p {
+    width: 100%;
+    text-align: right;
+    position: relative;
+  }
 }
-.temp_desc {
-  margin: 10px;
-}
+
 .icon {
-  padding: 0 10px;
+  position: absolute;
+  right: 85px;
+  height: 30px;
 }
+
 @media (max-width: 700px) {
   .main {
+    width: 100%;
+    text-align: right;
     display: flex;
     align-items: center;
     flex-flow: column;
-    text-align: center;
   }
   .weather {
-    text-align: center !important;
+    text-align: right !important;
   }
 }
