Create RecentJournals to display the last 2 entries on homepage

--- a/src/assets/scss/2-layout/grids.scss
+++ b/src/assets/scss/2-layout/grids.scss
@@ -6,7 +6,7 @@
   grid-template-areas:
     'header1 header2'
     'main1 main2'
-    'main3 main4'
+    'main main'
     'footer footer';
   margin: 0;
 }
