--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -12,6 +12,9 @@
 @import './4-components/tabbar';
 @import './4-components/recent-journals';
 
+//05-Pages
+@import './5-pages/_journals';
+
 * {
   margin: 0;
   padding: 0;
