Create Searchbar component

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -11,6 +11,7 @@
 @import './4-components/weather-widget';
 @import './4-components/tabbar';
 @import './4-components/recent-journals';
+@import './4-components/_searchbar';
 
 //05-Pages
 @import './5-pages/_journals';
