--- a/src/assets/scss/5-pages/_journals.scss
+++ b/src/assets/scss/5-pages/_journals.scss
@@ -1,4 +1,11 @@
 .journal-list-container {
   grid-column: 1 / 3;
   grid-row: 2 / 4;
+  height: 100%;
+  overflow-y: scroll;
+  scrollbar-width: none;
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
