--- a/src/assets/scss/4-components/_add-journal-form.scss
+++ b/src/assets/scss/4-components/_add-journal-form.scss
@@ -1,10 +1,10 @@
 .form {
+  grid-column: 1 / 3;
+  grid-row: 1 / 4;
   display: flex;
   border: 1px solid #ddd;
   flex-direction: column;
-  padding: 20px;
-  max-width: 400px;
-  margin: 1em;
+  width: 90%;
 
   label {
     color: #414449;
