--- a/src/assets/scss/5-pages/_journals.scss
+++ b/src/assets/scss/5-pages/_journals.scss
@@ -10,3 +10,19 @@
     display: none;
   }
 }
+
+.message-no-entries {
+  width: 100%;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  h2,
+  h3 {
+    color: $text-color;
+    text-align: left;
+    font-size: 1rem;
+  }
+}
