Add styling to homepage

--- a/src/assets/scss/1-helpers/_variables.scss
+++ b/src/assets/scss/1-helpers/_variables.scss
@@ -1,4 +1,7 @@
 $text-link: #a3c2cc;
-$text-color: #252f44;
+$text-color: #414449;
+$text-color_grey: #414449;
 $background: #f8f9fa;
+$mint: #d4e3e3;
+$mint-blue: #a3c2cc;
 $border: #ccc;
