--- a/src/assets/scss/4-components/_journal-entry.scss
+++ b/src/assets/scss/4-components/_journal-entry.scss
@@ -3,17 +3,42 @@
   border-bottom: 0.5px solid rgba(25, 26, 41, 0.1);
   border: 1px solid #eee;
   margin: 10px 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  width: 100%;
+  grid-template-columns: 30% 70%;
+  grid-template-rows: auto;
+  margin-bottom: 2rem;
+  text-align: left;
 }
 
 .entry-image {
-  height: 45px;
-  width: 45px;
-  border-radius: 50%;
+  height: 90px;
+  width: 80px;
+  justify-self: center;
+  align-self: center;
+  border-radius: 25%;
   border: 0.5px solid rgba(25, 26, 41, 0.1);
-  margin-bottom: 0.5em;
+}
+.journal_place,
+.journal_date {
+  font-size: 0.785rem;
+  font-weight: 400;
+  color: $text-color_grey;
+  opacity: 60%;
+  padding-top: 0.25rem;
+}
+
+.journal_entry {
+  font-size: 0.75rem;
+  font-weight: 400;
+
+  span {
+    width: 200px;
+  }
+
+  a {
+    opacity: 0.7;
+  }
 }
 
 .button-container {
