--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -12,11 +12,13 @@
 @import './4-components/weather-widget';
 @import './4-components/tabbar';
 @import './4-components/recent-journals';
-@import './4-components/_searchbar';
+@import './4-components/searchbar';
+@import './4-components/bookmarks';
 
 //05-Pages
-@import './5-pages/_homepage';
-@import './5-pages/_journals';
+@import './5-pages/homepage';
+@import './5-pages/journals';
+@import './5-pages/detailspage';
 
 // Typography
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
