--- a/src/assets/scss/5-pages/_detailspage.scss
+++ b/src/assets/scss/5-pages/_detailspage.scss
@@ -13,10 +13,76 @@
 }
 
 .content-container {
+  position: relative;
   grid-column: 1 / 3;
   grid-row: 2 / 4;
   width: 100%;
   margin-top: 2rem;
   padding: 1rem;
   background: $beige;
+}
+
+.bookmark-icon {
+  position: absolute;
+  top: 1rem;
+  border: none;
+  outline: none;
+  background: transparent;
+}
+
+.details-button-edit {
+  position: absolute;
+  bottom: 2rem;
+  right: 1.5rem;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  z-index: 50;
+
+  img {
+    height: 35px;
+    width: 35px;
+  }
+}
+
+.details-caption {
+  text-align: center;
+  font-weight: 600;
+}
+
+.details-date {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 400;
+  color: $text-color_grey;
+  opacity: 60%;
+  margin: 0.5rem 0 1.25rem;
+}
+
+.details-place {
+  text-align: right;
+  font-size: 1rem;
+  font-weight: 400;
+  color: $text-color_grey;
+  opacity: 60%;
+}
+
+.details-category {
+  font-size: 0.75rem;
+  font-weight: 500;
+  text-align: right;
+  color: $text-color;
+  opacity: 90%;
+  margin-bottom: 1rem;
+}
+
+.details-entry {
+  text-align: left;
+  font-size: 1rem;
+  font-weight: 400;
+  color: $text-color;
+  opacity: 80%;
+  margin-bottom: 1rem;
 }
