--- a/src/assets/scss/1-helpers/_variables.scss
+++ b/src/assets/scss/1-helpers/_variables.scss
@@ -2,6 +2,8 @@ $text-link: #a3c2cc;
 $text-color: #414449;
 $text-color_grey: #414449;
 $background: #f8f9fa;
+$input-background: #f2f5f7;
+
 $mint: #d4e3e3;
 $mint-blue: #a3c2cc;
 $beige: #f5f5f5;
