--- a/src/assets/scss/4-components/_add-journal-form.scss
+++ b/src/assets/scss/4-components/_add-journal-form.scss
@@ -1,24 +1,78 @@
 .form {
+  position: relative;
   grid-column: 1 / 3;
   grid-row: 1 / 4;
   display: flex;
-  border: 1px solid #ddd;
   flex-direction: column;
   width: 90%;
 
   label {
     color: #414449;
+    padding-bottom: 0.5rem;
   }
 
-  input {
-    margin: 1em 0;
+  input,
+  select {
+    margin-bottom: 1em;
     padding: 10px;
     outline: none;
+    border: none;
+    background: $input-background;
+    font-family: 'Montserrat', sans-serif;
   }
 }
 
+.journal-button-submit {
+  position: absolute;
+  top: 2rem;
+  right: 0;
+  background: transparent;
+  border: none;
+  outline: none;
+  border-radius: 50px;
+  background: #f8f9fa;
+  box-shadow: 4px 4px 8px #ecedee, -4px -4px 8px #f8f9fa;
+}
+
 .form-header {
-  margin-bottom: 1em;
+  padding: 2rem 1rem;
+  grid-area: main;
+  width: 100%;
+  max-width: 700px;
+  text-align: left;
+  align-self: start;
+
+  h2 {
+    font-size: 1.2rem;
+  }
+}
+
+.form-headline {
+  position: relative;
+  font-size: 1.5rem;
+  z-index: 100;
+
+  &:before {
+    content: '';
+    position: absolute;
+    z-index: -5;
+    width: 95px;
+    height: 3em;
+    left: -0.25em;
+    bottom: 0.15em;
+    border-bottom: 8px solid $mint;
+    z-index: -10;
+  }
+}
+
+.form-textarea {
+  width: 100%;
+  padding: 5px;
+  outline: none;
+  border: none;
+  background: $input-background;
+  margin-bottom: 1.5rem;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .form-image-preview {
