--- a/src/assets/scss/4-components/_bookmarks.scss
+++ b/src/assets/scss/4-components/_bookmarks.scss
@@ -12,6 +12,7 @@
 
   h2 {
     font-size: 1rem;
+    padding-top: 1rem;
   }
 }
 
@@ -34,7 +35,7 @@
 }
 
 .bookmark-container {
-  max-width: 700px;
+  max-width: 100%;
   grid-column: 1 / 3;
   grid-row: 2 / 4;
   width: 100%;
@@ -47,40 +48,45 @@
   }
 }
 
-.bookmarked-journals {
-}
-
 .bookmarked-journal_container {
-  justify-items: center;
-  display: grid;
+  grid-column: 1 / 3;
+  grid-row: 2 / 4;
   width: 100%;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
+  display: grid;
+  grid-template-columns: 40% 60%;
+  grid-template-rows: 200px;
   margin-bottom: 2rem;
 }
 
 .bookmarked-image_container {
+  width: 100%;
+  height: 100%;
   position: relative;
+  padding: 1rem;
 
   &:before {
     content: '';
     position: absolute;
     z-index: -5;
-    width: 140px;
-    height: 170px;
-    left: -0.75em;
-    bottom: -0.5em;
+    width: 120px;
+    height: 150px;
+    left: 0.3em;
+    bottom: 4.5rem;
     background: $mint;
     z-index: -10;
   }
 }
 
 .bookmarked-image {
-  height: 150px;
-  width: 140px;
+  height: 140px;
+  width: 120px;
   object-position: 50% 50%;
-
   z-index: 50;
+}
+
+.bookmarked-content {
+  padding: 0.5rem 0;
+  max-width: 500px;
 }
 
 .bookmarked_place,
@@ -97,6 +103,18 @@
   color: $text-color;
   margin-bottom: 0.5rem;
   position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    z-index: -5;
+    width: 95px;
+    height: 3em;
+    left: -0.25em;
+    bottom: 0.15em;
+    border-bottom: 8px solid $mint;
+    z-index: -10;
+  }
 }
 
 .bookmarked_entry {
