Add changes to searchbar

--- a/src/assets/scss/3-UI/_button.scss
+++ b/src/assets/scss/3-UI/_button.scss
@@ -8,3 +8,11 @@
   border: none;
   outline: none;
 }
+
+.add-button-cancel {
+  position: absolute;
+  top: 1rem;
+  background: transparent;
+  border: none;
+  outline: none;
+}
