--- a/src/assets/scss/1-helpers/_variables.scss
+++ b/src/assets/scss/1-helpers/_variables.scss
@@ -7,4 +7,4 @@ $input-background: #f2f5f7;
 $mint: #d4e3e3;
 $mint-blue: #a3c2cc;
 $beige: #f5f5f5;
-$border: #ccc;
+$border: RGBA(204, 204, 204, 0.44);
