--- a/src/assets/scss/4-components/_add-journal-form.scss
+++ b/src/assets/scss/4-components/_add-journal-form.scss
@@ -19,6 +19,7 @@
     border: none;
     background: $input-background;
     font-family: 'Montserrat', sans-serif;
+    font-size: 0.85rem;
   }
 }
 
@@ -32,10 +33,15 @@
   border-radius: 50px;
   background: #f8f9fa;
   box-shadow: 4px 4px 8px #ecedee, -4px -4px 8px #f8f9fa;
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 20%;
+  }
 }
 
 .form-header {
-  padding: 2rem 1rem;
+  padding: 4rem 1rem;
   grid-area: main;
   width: 100%;
   max-width: 700px;
@@ -73,6 +79,7 @@
   background: $input-background;
   margin-bottom: 1.5rem;
   font-family: 'Montserrat', sans-serif;
+  font-size: 0.85rem;
 }
 
 .form-image-preview {
