--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -19,6 +19,7 @@
 @import './5-pages/homepage';
 @import './5-pages/journals';
 @import './5-pages/detailspage';
+@import './5-pages/not-found';
 
 // Typography
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
