--- a/src/assets/scss/5-pages/_journals-list-page.scss
+++ b/src/assets/scss/5-pages/_journals-list-page.scss
@@ -1,3 +1,14 @@
+.journal-entry_container {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 30% 70%;
+  grid-template-rows: auto;
+  text-align: left;
+  border-bottom: 1px solid $border;
+  margin: 10px 0;
+  padding-bottom: 1rem;
+}
+
 .journal-list-container {
   grid-column: 1 / 3;
   grid-row: 2 / 4;
@@ -8,20 +19,6 @@
 
   ::-webkit-scrollbar {
     display: none;
-  }
-}
-
-.journal-page-header {
-  grid-area: header1;
-  width: 100%;
-  max-width: 700px;
-  text-align: left;
-  align-self: center;
-  padding-left: 1rem;
-
-  h2 {
-    font-size: 1rem;
-    padding-top: 2rem;
   }
 }
 
