Add error message to weather widget

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -5,6 +5,7 @@
 // 03-UI components
 @import './3-UI/button';
 @import './3-UI/header';
+@import './3-UI/error-messages';
 
 // 04-Components
 @import './4-components/journal-form';
