Add mock data for presentation

--- a/src/assets/scss/2-layout/grids.scss
+++ b/src/assets/scss/2-layout/grids.scss
@@ -10,6 +10,6 @@
     'main main'
     'main2 main2'
     'footer footer';
-  margin: 0;
-  padding: 0 1.5rem;
+  margin: 0 1.5em;
+  padding: 0;
 }
