--- a/src/assets/scss/4-components/_journal-entry.scss
+++ b/src/assets/scss/4-components/_journal-entry.scss
@@ -1,10 +1,8 @@
 .journal-content-container {
-  justify-items: center;
   display: grid;
   grid-template-columns: 40% 60%;
-  grid-template-rows: auto;
-  margin-bottom: 1.85rem;
-  padding: 0.4rem 0 0 0.4rem;
+  grid-template-rows: 160px;
+  margin-bottom: 0.5rem;
 
   a {
     padding: 0 0.5rem;
@@ -19,38 +17,31 @@
   position: absolute;
   bottom: -0.8rem;
   right: 0.5rem;
-  height: 30px;
-  width: 30px;
+  height: 24px;
+  width: 24px;
   border: none;
   outline: none;
-  border-radius: 50%;
   background: transparent;
-
-  img {
-    height: 70%;
-    width: 70%;
-    border-radius: 50%;
-  }
-}
-
-.journal-image {
-  height: 150px;
-  width: 140px;
-  object-position: 50% 50%;
-  z-index: 50;
 }
 
 .image-container {
   position: relative;
 
+  img {
+    height: 130px;
+    width: 120px;
+    object-position: 50% 50%;
+    z-index: 50;
+    padding-top: 0.5em;
+  }
+
   &:before {
     content: '';
     position: absolute;
-    z-index: -5;
-    width: 140px;
-    height: 170px;
-    left: -0.75em;
-    bottom: -0.5em;
+    width: 120px;
+    height: 130px;
+    left: -0.5em;
+    bottom: 1.1em;
     background: $mint;
     z-index: -10;
   }
@@ -67,18 +58,21 @@
 
 .entry-image {
   height: 90px;
-  width: 80px;
-  justify-self: center;
+  width: 90px;
   align-self: center;
-  border-radius: 25%;
-  border: 0.5px solid rgba(25, 26, 41, 0.1);
+  border-radius: 10%;
 }
 
-.journal_truncate {
-  font-size: 0.7rem;
+.journal_entry {
+  font-size: 0.8rem;
   font-weight: 400;
+  line-height: 120%;
   color: $text-color;
-  margin-bottom: 0.5rem;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  padding-top: 0.5rem;
 }
 
 .button-container {
