--- a/src/assets/scss/1-helpers/_variables.scss
+++ b/src/assets/scss/1-helpers/_variables.scss
@@ -1,9 +1,9 @@
 $text-link: #a3c2cc;
-$text-color: #414449;
+$text-color: #3c3c3c;
 $text-color_grey: #414449;
 
 $background: #f8f9fa;
-$input-background: #f2f5f7;
+$input-background: #f4f4f4;
 
 $mint: #d4e3e3;
 $mint-blue: #a3c2cc;
