--- a/src/assets/scss/5-pages/_journals-list-page.scss
+++ b/src/assets/scss/5-pages/_journals-list-page.scss
@@ -2,8 +2,6 @@
   display: grid;
   width: 100%;
   grid-template-columns: 30% 70%;
-  grid-template-rows: auto;
-  text-align: left;
   border-bottom: 1px solid $border;
   margin: 10px 0;
   padding-bottom: 1rem;
@@ -13,7 +11,7 @@
   grid-column: 1 / 3;
   grid-row: 2 / 4;
   height: 100%;
-  width: 100%;
+  max-width: 700px;
   overflow-y: scroll;
   scrollbar-width: none;
 
