--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -40,7 +40,11 @@ html body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   margin: 0;
+  padding: 0;
   background-color: $background;
+}
+
+body {
   width: 100%;
   height: 100%;
 }
