Remove unneeded files and add changes to styling

--- a/src/assets/scss/3-UI/_button.scss
+++ b/src/assets/scss/3-UI/_button.scss
@@ -12,6 +12,7 @@
 .add-button-cancel {
   position: absolute;
   top: 1rem;
+  left: 2rem;
   background: transparent;
   border: none;
   outline: none;
