--- a/src/assets/scss/4-components/_journal-form.scss
+++ b/src/assets/scss/4-components/_journal-form.scss
@@ -8,11 +8,12 @@
   grid-row: 1 / 4;
   display: flex;
   flex-direction: column;
-  width: 90%;
+  max-width: 400px;
+  margin: 1em;
 
   label {
     color: #414449;
-    padding-bottom: 0.5rem;
+    margin: 0.5rem 0;
   }
 
   input,
