--- a/src/assets/scss/4-components/_tabbar.scss
+++ b/src/assets/scss/4-components/_tabbar.scss
@@ -4,9 +4,19 @@
   max-width: 1000px;
   grid-area: footer;
   align-self: end;
+  -webkit-box-shadow: -2px -3px 9px -2px rgba(232, 232, 232, 0.48);
+  box-shadow: -2px -3px 9px -2px rgba(232, 232, 232, 0.48);
 }
 
 .add-icon {
   height: 45px;
   width: 45px;
+}
+
+.MuiTabs-flexContainer {
+  width: 100%;
+
+  span {
+    font-size: 0.785em;
+  }
 }
