--- a/src/assets/scss/3-UI/_error-messages.scss
+++ b/src/assets/scss/3-UI/_error-messages.scss
@@ -1,5 +1,6 @@
 .weather-error {
   grid-area: header2;
+  margin-top: 2rem;
   color: $text-color;
   font-size: 0.8rem;
   justify-content: center;
@@ -17,6 +18,6 @@
   h3 {
     color: $text-color;
     text-align: left;
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 }
