--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -20,6 +20,7 @@
 @import './5-pages/journals-list-page';
 @import './5-pages/details-page';
 @import './5-pages/bookmarks-page';
+@import './5-pages/under-construction-page';
 @import './5-pages/not-found-page';
 
 // Typography
