--- a/src/assets/scss/4-components/_tabbar.scss
+++ b/src/assets/scss/4-components/_tabbar.scss
@@ -1,4 +1,5 @@
 .tabbar {
+  background: $background;
   flex-grow: 1;
   width: 100vw;
   max-width: 1000px;
@@ -6,6 +7,7 @@
   align-self: end;
   -webkit-box-shadow: -2px -3px 9px -2px rgba(232, 232, 232, 0.48);
   box-shadow: -2px -3px 9px -2px rgba(232, 232, 232, 0.48);
+  z-index: 1000;
 }
 
 .add-icon {
