--- a/src/assets/scss/5-pages/_under-construction-page.scss
+++ b/src/assets/scss/5-pages/_under-construction-page.scss
@@ -23,4 +23,10 @@
 
     text-align: center;
   }
+
+  a {
+    color: #006b6b;
+    font-size: 1.2rem;
+    border-bottom: 1px solid #006b6b;
+  }
 }
