--- a/src/assets/scss/4-components/_journal-entry.scss
+++ b/src/assets/scss/4-components/_journal-entry.scss
@@ -1,8 +1,7 @@
 .journal-content-container {
   display: grid;
-  grid-template-columns: 40% 60%;
-  grid-template-rows: 160px;
-  margin-bottom: 0.5rem;
+  grid-template-columns: 30% 70%;
+  grid-template-rows: 150px;
 
   a {
     padding: 0 0.5rem;
@@ -28,20 +27,20 @@
   position: relative;
 
   img {
-    height: 120px;
+    height: 110px;
     width: 100px;
     object-position: 50% 50%;
     z-index: 50;
-    padding-top: 0.5em;
+    padding: 0.8em 0.3em 0 0;
   }
 
   &:before {
     content: '';
     position: absolute;
+    height: 105px;
     width: 100px;
-    height: 120px;
     left: -0.5em;
-    bottom: 1.9em;
+    bottom: 1.8em;
     background: $mint;
     z-index: -10;
   }
