--- a/src/assets/scss/3-UI/_error-messages.scss
+++ b/src/assets/scss/3-UI/_error-messages.scss
@@ -1,8 +1,8 @@
 .weather-error {
   grid-area: header2;
-  margin-top: 2rem;
+  margin-top: 2em;
   color: $text-color;
-  font-size: 0.8rem;
+  font-size: 1em;
   justify-content: center;
 }
 
@@ -18,6 +18,6 @@
   h3 {
     color: $text-color;
     text-align: left;
-    font-size: 1.2rem;
+    font-size: 1.2em;
   }
 }
