--- a/src/assets/scss/5-pages/_bookmarks-page.scss
+++ b/src/assets/scss/5-pages/_bookmarks-page.scss
@@ -4,7 +4,7 @@
   grid-row: 2 / 4;
   width: 100%;
   height: 100%;
-  padding-left: 0.2rem;
+  padding-left: 0.2em;
   overflow-y: scroll;
   scrollbar-width: none;
 
@@ -13,10 +13,10 @@
   }
 
   img {
-    margin-left: 0.3rem;
+    margin-left: 0.3em;
   }
 }
 
 .back-home-icon {
-  margin-bottom: 1rem;
+  margin-bottom: 1em;
 }
