--- a/src/assets/scss/5-pages/_details-page.scss
+++ b/src/assets/scss/5-pages/_details-page.scss
@@ -5,7 +5,7 @@
   border: 0.5px solid rgba(25, 26, 41, 0.2);
 
   img {
-    width: 100%;
+    width: 99vw;
     height: 100%;
     overflow: hidden;
     object-fit: cover;
@@ -17,9 +17,11 @@
   grid-column: 1 / 3;
   grid-row: 2 / 4;
   width: 100%;
+  height: 100%;
   margin-top: 2rem;
   padding: 1rem;
-  background: $beige;
+  background: $background;
+  border: 0.5px solid rgba(25, 26, 41, 0.1);
 }
 
 .bookmark-icon {
