--- a/src/assets/scss/2-layout/grids.scss
+++ b/src/assets/scss/2-layout/grids.scss
@@ -2,6 +2,7 @@
   justify-items: center;
   height: 100vh;
   display: grid;
+  position: fixed;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 20% 10% 60% 10%;
   grid-template-areas:
@@ -11,4 +12,29 @@
     'footer footer';
   margin: 0 1.5em;
   padding: 0;
+  overflow-x: hidden;
+}
+
+.frame {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  inset: 0;
+
+  &__main {
+    transition: margin-left 0.5s;
+    width: 100%;
+    height: 100%;
+    margin-left: 5rem;
+    padding-right: 2rem;
+    padding-bottom: 2.5px;
+
+    &--expanded {
+      margin-left: 250px;
+    }
+
+    @media screen and (min-width: 768px) {
+      padding-left: 7rem;
+    }
+  }
 }
