--- a/src/assets/scss/2-layout/grids.scss
+++ b/src/assets/scss/2-layout/grids.scss
@@ -37,4 +37,19 @@
       padding-left: 7rem;
     }
   }
+
+  &__overlay {
+    &--expanded {
+      position: absolute;
+      background: rgba(107, 114, 128, 1);
+      opacity: 0.75;
+      inset: 0;
+      z-index: 5;
+      transition: 250ms;
+
+      @media screen and (min-width: 768px) {
+        display: none;
+      }
+    }
+  }
 }
