--- a/src/assets/scss/2-layout/grids.scss
+++ b/src/assets/scss/2-layout/grids.scss
@@ -25,16 +25,11 @@
     transition: margin-left 0.5s;
     width: 100%;
     height: 100%;
-    margin-left: 5rem;
-    padding-right: 2rem;
+    max-width: 100vw;
     padding-bottom: 2.5px;
 
     &--expanded {
       margin-left: 250px;
-    }
-
-    @media screen and (min-width: 768px) {
-      padding-left: 7rem;
     }
   }
 
