Add places-autocomplete to map

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -15,6 +15,7 @@
 @import './4-components/tabbar';
 @import './4-components/recent-journals';
 @import './4-components/searchbar';
+@import './4-components/map';
 
 //05-Pages
 @import './5-pages/home-page';
