--- a/src/assets/scss/4-components/_map.scss
+++ b/src/assets/scss/4-components/_map.scss
@@ -6,10 +6,19 @@
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  max-width: 400px;
+  max-width: 300px;
   z-index: 5;
 
+  @media screen and (min-width: 768px) {
+    max-width: 400px;
+  }
+
+  div {
+    width: 100%;
+  }
+
   input {
+    width: 100%;
     padding: 0.25rem 0.5rem;
   }
 }
