--- a/src/assets/scss/3-UI/_sidebar.scss
+++ b/src/assets/scss/3-UI/_sidebar.scss
@@ -5,7 +5,7 @@
   padding-top: 5rem;
   position: fixed;
   transform: translateX(-250px);
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in;
   width: 250px;
   z-index: 10;
 
