--- a/src/assets/scss/2-layout/grids.scss
+++ b/src/assets/scss/2-layout/grids.scss
@@ -1,20 +1,3 @@
-.grid {
-  justify-items: center;
-  height: 100vh;
-  display: grid;
-  position: fixed;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 20% 10% 60% 10%;
-  grid-template-areas:
-    'header1 header2'
-    'main main'
-    'main2 main2'
-    'footer footer';
-  margin: 0 1.5em;
-  padding: 0;
-  overflow-x: hidden;
-}
-
 .frame {
   height: 100%;
   width: 100%;
@@ -28,7 +11,29 @@
     max-width: 100vw;
 
     &--expanded {
+      transition: margin-left 0.5s;
       margin-left: 250px;
+    }
+    &__title {
+      margin-top: 3.5rem;
+      width: 100%;
+      padding-left: 1rem;
+    }
+
+    @media screen and (min-width: 768px) {
+      margin-left: 80px;
+      transition: margin-left 0.5s;
+
+      &--expanded {
+        transition: margin-left 0.5s;
+        margin-left: 250px;
+      }
+
+      &__title {
+        font-size: 2rem;
+        margin-top: 3rem;
+        padding-left: 4rem;
+      }
     }
   }
 
