--- a/src/assets/scss/5-pages/_details-page.scss
+++ b/src/assets/scss/5-pages/_details-page.scss
@@ -1,106 +1,123 @@
-.featured-image-wrapper {
-  grid-column: 1 / 3;
-  grid-row: 1 / 3;
-  object-position: 50% 50%;
-  border: 0.5px solid rgba(25, 26, 41, 0.2);
-
-  img {
-    width: 99vw;
-    height: 100%;
-    overflow: hidden;
-    object-fit: cover;
-  }
-}
-
-.content-container {
-  position: relative;
-  grid-column: 1 / 3;
-  grid-row: 2 / 4;
-  min-width: 400px;
+.journal-details {
   width: 100%;
   height: 100%;
-  margin-top: 2rem;
-  padding: 1.3rem;
-  background: $background;
-  border: 0.5px solid rgba(194, 195, 201, 0.1);
-}
 
-.bookmark-icon {
-  position: absolute;
-  top: 1rem;
-  border: none;
-  outline: none;
-  background: transparent;
-}
+  &__featured-image-wrapper {
+    object-position: 50% 50%;
+    border: 0.5px solid rgba(25, 26, 41, 0.2);
+    height: 30%;
+    display: block;
+    position: relative;
 
-.details-button-edit {
-  position: absolute;
-  bottom: 2rem;
-  right: 1.5rem;
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
-  border: none;
-  outline: none;
-  z-index: 50;
-
-  img {
-    height: 35px;
-    width: 35px;
-  }
-}
-
-.details-caption {
-  text-align: center;
-  font-weight: 600;
-}
-
-.details-date {
-  text-align: center;
-  font-size: 1rem;
-  font-weight: 400;
-  color: $text-color_grey;
-  opacity: 60%;
-  margin: 0.5rem 0 1.25rem;
-}
-
-.details-place {
-  text-align: right;
-  font-size: 1rem;
-  font-weight: 400;
-  color: $text-color_grey;
-  opacity: 60%;
-}
-
-.details-category {
-  font-size: 0.75rem;
-  font-weight: 500;
-  text-align: right;
-  color: $text-color;
-  opacity: 90%;
-  margin-bottom: 1rem;
-}
-
-.details-entry {
-  text-align: left;
-  font-size: 1em;
-  line-height: 140%;
-  font-weight: 400;
-  color: $text-color;
-  opacity: 80%;
-  margin-bottom: 1em;
-
-  @media (min-width: 768px) {
-    margin: 1.5em 6em;
-
-    body {
-      font-size: 18px;
+    img {
+      width: 100%;
+      display: block;
+      height: 100%;
+      overflow: hidden;
+      object-fit: cover;
     }
   }
 
-  @media (min-width: 1024px) {
-    body {
-      font-size: 20px;
+  &__content-container {
+    position: relative;
+    height: 100%;
+    margin-top: 2rem;
+    padding: 0 2rem;
+    background: $background;
+    border: 0.5px solid rgba(194, 195, 201, 0.1);
+  }
+
+  &__bookmark-icon {
+    position: absolute;
+    top: 1rem;
+    left: 2rem;
+    border: none;
+    outline: none;
+    background: transparent;
+  }
+
+  &__button-edit {
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+    z-index: 50;
+
+    img {
+      height: 35px;
+      width: 35px;
+    }
+  }
+
+  &__caption {
+    text-align: center;
+    font-weight: 600;
+  }
+
+  &__date {
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+    color: $text-color_grey;
+    opacity: 60%;
+    margin: 0.5rem 0 1.25rem;
+  }
+
+  &__place {
+    text-align: right;
+    font-size: 1rem;
+    font-weight: 400;
+    color: $text-color_grey;
+    opacity: 60%;
+  }
+
+  &__category {
+    font-size: 0.75rem;
+    font-weight: 500;
+    text-align: right;
+    color: $text-color;
+    opacity: 90%;
+    margin-bottom: 1rem;
+  }
+
+  &__entry {
+    text-align: left;
+    font-size: 1em;
+    line-height: 140%;
+    font-weight: 400;
+    color: $text-color;
+    opacity: 80%;
+    margin-bottom: 1em;
+
+    @media (min-width: 768px) {
+      margin: 1.5em 6em;
+
+      body {
+        font-size: 18px;
+      }
+    }
+
+    @media (min-width: 1024px) {
+      body {
+        font-size: 20px;
+      }
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-left: -80px;
+
+    &__featured-image-wrapper {
+       height: 40%;
+    }
+
+    &__content-container {
+      margin-left: 80px;
+      padding: 2rem;
     }
   }
 }
