--- a/src/assets/scss/4-components/_journal-entry.scss
+++ b/src/assets/scss/4-components/_journal-entry.scss
@@ -1,76 +1,9 @@
-.journal-content-container {
-  display: grid;
-  grid-template-columns: 30% 70%;
-  grid-template-rows: 150px;
-
-  a {
-    padding: 0 0.5rem;
-  }
-}
-
-.journal-container {
-  position: relative;
-}
-
-.journal-button-delete {
-  position: absolute;
-  bottom: -0.8rem;
-  right: 0.5rem;
-  height: 24px;
-  width: 24px;
-  border: none;
-  outline: none;
-  background: transparent;
-}
-
-.image-container {
-  position: relative;
-
-  img {
-    height: 110px;
-    width: 100px;
-    object-position: 50% 50%;
-    padding: 0.8em 0.3em 0 0;
-  }
-
-  &:before {
-    content: '';
-    position: absolute;
-    height: 105px;
-    width: 100px;
-    left: -0.5em;
-    bottom: 1.8em;
-    background: $mint;
-    z-index: -10;
-  }
-}
-
-.journal_place,
-.journal_date {
-  font-size: 0.785rem;
-  font-weight: 400;
-  color: $text-color_grey;
-  opacity: 60%;
-  margin-top: 0.5rem;
-}
-
 .entry-image {
+  display: inline-block;
   height: 90px;
   width: 90px;
   align-self: center;
   border-radius: 10%;
-}
-
-.journal_entry {
-  font-size: 0.8rem;
-  font-weight: 400;
-  line-height: 120%;
-  color: $text-color;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  padding-top: 0.5rem;
 }
 
 .button-container {
@@ -94,32 +27,20 @@
   font-weight: 500;
 }
 
-.journal_caption {
-  font-size: 1rem;
-  font-weight: 500;
-  color: $text-color;
-  position: relative;
-
-  &:before {
-    content: '';
-    position: absolute;
-    z-index: -5;
-    width: 30%;
-    height: 5px;
-    left: 0;
-    bottom: 0;
-    background: $mint;
-    z-index: -10;
-  }
-}
-
 .journal-list {
   &__container {
+    width: 90%;
     overflow-y: auto;
     height: 100%;
     padding: 2rem 0;
+    margin: 0 auto;
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
     @media screen and (min-width: 768px) {
       width: 80%;
+      max-width: 800px;
       margin: 0 auto;
     }
   }
