--- a/src/assets/scss/4-components/_searchbar.scss
+++ b/src/assets/scss/4-components/_searchbar.scss
@@ -1,5 +1,6 @@
 .searchbar-container {
-  grid-area: header2;
+  width: 80%;
+  margin: 0 auto;
   display: flex;
   justify-self: center;
   align-items: flex-end;
