--- a/src/assets/scss/5-pages/_journals-list-page.scss
+++ b/src/assets/scss/5-pages/_journals-list-page.scss
@@ -1,15 +1,68 @@
-.journal-entry_container {
+.journal-entry {
+  position: relative;
   display: grid;
-  width: 100%;
+  width: 90%;
+  min-width: fit-content;
   grid-template-columns: 30% 70%;
   border-bottom: 1px solid $border;
   margin: 10px 0;
   padding-bottom: 1rem;
+
+  &__body {
+    &__place,
+    &__date {
+      font-size: 0.785rem;
+      font-weight: 400;
+      color: $text-color_grey;
+      opacity: 60%;
+      margin-top: 8px;
+    }
+
+    &__caption {
+      font-size: 1rem;
+      font-weight: 500;
+      color: $text-color;
+      position: relative;
+
+      &:before {
+        content: '';
+        position: absolute;
+        z-index: -5;
+        width: 30%;
+        height: 5px;
+        left: 0;
+        bottom: 0;
+        background: $mint;
+        z-index: -10;
+      }
+    }
+
+    &__entry {
+      font-size: 0.8rem;
+      font-weight: 400;
+      line-height: 120%;
+      color: $text-color;
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      padding-top: 8px;
+    }
+  }
+
+  &__delete {
+    position: absolute;
+    bottom: 0;
+    right: 8px;
+    height: 24px;
+    width: 24px;
+    border: none;
+    outline: none;
+    background: transparent;
+  }
 }
 
 .journal-list-container {
-  grid-column: 1 / 3;
-  grid-row: 2 / 4;
   height: 100%;
   max-width: 700px;
   overflow-y: scroll;
