--- a/src/assets/scss/3-UI/_button.scss
+++ b/src/assets/scss/3-UI/_button.scss
@@ -23,3 +23,23 @@
     width: 1rem;
   }
 }
+
+.add-journal {
+  position: absolute;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
+  right: 40px;
+  bottom: 40px;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background: black;
+
+  @media screen and (min-width: 768px) {
+    width: 56px;
+    height: 56px;
+      bottom: 60px;
+  }
+}
