--- a/src/assets/scss/4-components/_searchbar.scss
+++ b/src/assets/scss/4-components/_searchbar.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-self: center;
   align-items: flex-end;
-  padding: 1.5em 0;
+  padding: 1.5em 0 0;
 }
 
 .searchbar-formfield {
